--- a/index.html
+++ b/index.html
@@ -18,74 +18,112 @@
 
 
 <script>
-    function secretCode(){
+    function SecretCode(){
         var random_num = Math.floor((Math.random() * 10) + 1);
+        var self = this;
+
+        this.domObjects = function() {
+            //dom creation
+            var input = $("<input>").attr({
+                type: "number",
+                id: "guess_num"
+            });
+
+            var button = $('<input>').attr({
+                type: "button",
+                id: "guess_btn",
+                value: 'Guess'
+            });
+
+            var answer = $('<div>').attr({
+                id: "response",
+                text: "You did it "
+            });
+            $("body").append(input, button, answer);
+            $("#guess_btn").click(function(){
+                console.log("secret num: " + secret.secretNum() + " " + secret2.secretNum());
+                var num = $("#guess_num").val();
+                //used for testing console.log("guessed number " + secret.guessNum(num));
+                if ("Win" === secret.guessNum(num)){
+                    $("#guess_num").val("");
+                }
+            });
+        };
 
         this.secretNum = function() {
             return random_num;
         };
 
-        this.guessNum = function(num){
-            if (num > random_num){
+        this.guessNum = function(num) {
+            if (num > random_num) {
                 return "lower";
             }
-            else if (num < random_num){
+            else if (num < random_num) {
                 return "higher";
             }
             else {
-                return "You guessed it!";
+                self.resetNum();
+                return "Win";
             }
+        };
+        this.resetNum = function(){
+            random_num = Math.floor((Math.random() * 10) + 1);
         }
     }
 
-    var secret = new secretCode();
+    var secret = new SecretCode();
+    secret.domObjects();
 
 
 
-    //guess number
-    //var guess = $("guess_num").val();
-
-    $("#guess_num").click(function(){
-        this.secretNum();
-        $("#guess_num").val();
-
-        console.log("secretNum: " + secretNum());
-    });
-
-    $("#guess_btn").click(function(){
-        this.guessNum(num);
-
-    });
-
-    //dom creation
-    var input = $("<input>").attr({
-        type: "number",
-        id: "guess_num"
-    });
-
-    var button = $('<input>').attr({
-        type: "button",
-        id: "guess_btn",
-        value: 'Guess'
-    });
-
-    var answer = $('<div>').attr({
-        id: "response",
-        text: "You did it "
-    });
-
-//document load
-    $(document).ready(function(){
-        $("body").append(input, button, answer);
-        $("#guess_num").click(function(){
-            secretNum();
-            $("#guess_num").val();
-
-            console.log("secretNum: " + secretNum());
+   /* function domObjects() {
+        //dom creation
+        var input = $("<input>").attr({
+            type: "number",
+            id: "guess_num"
         });
 
-    });
+        var button = $('<input>').attr({
+            type: "button",
+            id: "guess_btn",
+            value: 'Guess'
+        });
+
+        var answer = $('<div>').attr({
+            id: "response",
+            text: "You did it "
+        });
+        $("body").append(input, button, answer);
+        $("#guess_btn").click(function(){
+            console.log("secret num: " + secret.secretNum() + " " + secret2.secretNum());
+            var num = $("#guess_num").val();
+            //used for testing console.log("guessed number " + secret.guessNum(num));
+            if ("Win" === secret.guessNum(num)){
+                $("#guess_num").val("");
+            }
+        });
+    }*/
+//document load
+    //$(document).ready(function(){
+/*        $("body").append(input, button, answer);
+        $("#guess_btn").click(function(){
+            console.log("secret num: " + secret.secretNum() + " " + secret2.secretNum());
+            var num = $("#guess_num").val();
+            //used for testing console.log("guessed number " + secret.guessNum(num));
+            if ("Win" === secret.guessNum(num)){
+                $("#guess_num").val("");
+            }
+        });*/
+ //   });
+
+
 
 
 </script>
 </html>
+
+
+<!--
+$("#guess_num").click(function(){
+secret.secretNum();
+$("#guess_num").val();-->
