--- a/index.html
+++ b/index.html
@@ -2,28 +2,22 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Guessing Game</title>
+    <title>Guessing Game OOP</title>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script>
 
-
-
-
-
-
 </head>
-<body>
 
+<body>
 </body>
 
-
-
 <script>
+
     function SecretCode(){
         var random_num = Math.floor((Math.random() * 10) + 1);
         var self = this;
 
+        //dom creation
         this.domObjects = function() {
-            //dom creation
             var input = $("<input>").attr({
                 type: "number",
                 id: "guess_num"
@@ -41,9 +35,10 @@
             });
             $("body").append(input, button, answer);
             $("#guess_btn").click(function(){
-                console.log("secret num: " + secret.secretNum() + " " + secret2.secretNum());
+                console.log("secret num: " + secret.secretNum());
                 var num = $("#guess_num").val();
-                //used for testing console.log("guessed number " + secret.guessNum(num));
+                //console log below used for testing
+                //console.log("guessed number " + secret.guessNum(num));
                 if ("Win" === secret.guessNum(num)){
                     $("#guess_num").val("");
                 }
@@ -74,56 +69,5 @@
     var secret = new SecretCode();
     secret.domObjects();
 
-
-
-   /* function domObjects() {
-        //dom creation
-        var input = $("<input>").attr({
-            type: "number",
-            id: "guess_num"
-        });
-
-        var button = $('<input>').attr({
-            type: "button",
-            id: "guess_btn",
-            value: 'Guess'
-        });
-
-        var answer = $('<div>').attr({
-            id: "response",
-            text: "You did it "
-        });
-        $("body").append(input, button, answer);
-        $("#guess_btn").click(function(){
-            console.log("secret num: " + secret.secretNum() + " " + secret2.secretNum());
-            var num = $("#guess_num").val();
-            //used for testing console.log("guessed number " + secret.guessNum(num));
-            if ("Win" === secret.guessNum(num)){
-                $("#guess_num").val("");
-            }
-        });
-    }*/
-//document load
-    //$(document).ready(function(){
-/*        $("body").append(input, button, answer);
-        $("#guess_btn").click(function(){
-            console.log("secret num: " + secret.secretNum() + " " + secret2.secretNum());
-            var num = $("#guess_num").val();
-            //used for testing console.log("guessed number " + secret.guessNum(num));
-            if ("Win" === secret.guessNum(num)){
-                $("#guess_num").val("");
-            }
-        });*/
- //   });
-
-
-
-
 </script>
 </html>
-
-
-<!--
-$("#guess_num").click(function(){
-secret.secretNum();
-$("#guess_num").val();-->
