added parallax and sprites

--- a/index.html
+++ b/index.html
@@ -10,7 +10,27 @@
 </head>
 
 <body>
+
     <div class="game_area"></div>
+
+    <div class="para_container">
+        <div class="background"></div>
+        <div class="para_element" id="background1" para_speed=".2">
+            <img src="images/background.png" alt="">
+        </div>
+        <div class="para_element" id="background2" para_speed=".2">
+            <img src="images/background.png" alt="">
+        </div>
+        <div class="para_element" id="mario" para_speed=".2"></div>
+        <div class="para_element" para_speed="1" id="ground1">
+            <img src="images/ground.png" alt="">
+        </div>
+        <div class="para_element" para_speed="1" id="ground2">
+            <img src="images/ground.png" alt="">
+        </div>
+    </div>
+
+
 
 </body>
 </html>
