added bullet to hit mario

--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
             <img src="images/background.png" alt="">
         </div>
         <div class="para_element" id="mario" para_speed=".2"></div>
+        <div class="para_element bullet" id="bullet" para_speed=".2"></div>
         <div class="para_element" para_speed="1" id="ground1">
             <img src="images/ground.png" alt="">
         </div>
