--- a/index.html
+++ b/index.html
@@ -15,23 +15,21 @@
 
     <div class="para_container">
         <div class="background"></div>
-        <div class="para_element" id="background1" para_speed=".2">
+        <div class="para_element" id="background1">
             <img src="images/background.png" alt="">
         </div>
-        <div class="para_element" id="background2" para_speed=".2">
+        <div class="para_element" id="background2">
             <img src="images/background.png" alt="">
         </div>
-        <div class="para_element" id="mario" para_speed=".2"></div>
-        <div class="para_element bullet" id="bullet" para_speed=".2"></div>
-        <div class="para_element" para_speed="1" id="ground1">
+        <div class="para_element" id="mario"></div>
+        <div class="para_element bullet" id="bullet"></div>
+        <div class="para_element" id="ground1">
             <img src="images/ground.png" alt="">
         </div>
-        <div class="para_element" para_speed="1" id="ground2">
+        <div class="para_element" id="ground2">
             <img src="images/ground.png" alt="">
         </div>
     </div>
-
-
 
 </body>
 </html>
