html img update

--- a/index.html
+++ b/index.html
@@ -16,18 +16,18 @@
     <div class="para_container">
         <div class="background"></div>
         <div class="para_element" id="background1">
-            <img src="images/background.png" alt="">
+            <img src="images/background.png" alt="background1">
         </div>
         <div class="para_element" id="background2">
-            <img src="images/background.png" alt="">
+            <img src="images/background.png" alt="background2">
         </div>
         <div class="para_element" id="mario"></div>
         <div class="para_element bullet" id="bullet"></div>
         <div class="para_element" id="ground1">
-            <img src="images/ground.png" alt="">
+            <img src="images/ground.png" alt="ground1">
         </div>
         <div class="para_element" id="ground2">
-            <img src="images/ground.png" alt="">
+            <img src="images/ground.png" alt="ground2">
         </div>
     </div>
 
