updated buttons and inputs. added header and instructions

--- a/index.html
+++ b/index.html
@@ -9,6 +9,11 @@
     <script src="script.js"></script>
 </head>
 <body>
+    <h1>Guess!</h1>
+    <h4>Enter a number between 1-10</h4>
+    <p><img src="images/guess_btn.png" alt="guess button" class="guess_btn"> = Submit Guess</p>
+    <p><img src="images/reset_btn.png" alt="reset button" class="reset_btn"> = Reset Game</p>
+
     <div class="game_area"></div>
 
     <div class="para_container">
