beginning win and lose images

--- a/index.html
+++ b/index.html
@@ -14,7 +14,11 @@
     <p><img src="images/guess_btn.png" alt="guess button" class="guess_btn"> = Submit Guess</p>
     <p><img src="images/reset_btn.png" alt="reset button" class="reset_btn"> = Reset Game</p>
 
-    <div class="game_area"></div>
+    <div class="game_area">
+        <img src="images/m" alt="loser">
+        <img src="images/m" alt="winner">
+
+    </div>
 
     <div class="para_container">
         <div class="para_element" id="background1">
