--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
     <p><img src="images/reset_btn.png" alt="reset button" class="reset_btn"> = Reset Game</p>
 
     <div class="game_area">
-        <img src="images/m" alt="loser">
-        <img src="images/m" alt="winner">
+<!--        <img src="images/m" alt="loser">
+        <img src="images/m" alt="winner">-->
 
     </div>
 
