--- a/index.html
+++ b/index.html
@@ -9,16 +9,15 @@
     <script src="script.js"></script>
 </head>
 <body>
-    <h1>Guess!</h1>
+    <h1>To Fly Or Not To Fly!</h1>
     <h4>Enter a number between 1-10</h4>
     <p><img src="images/guess_btn.png" alt="guess button" class="guess_btn"> = Submit Guess</p>
     <p><img src="images/reset_btn.png" alt="reset button" class="reset_btn"> = Reset Game</p>
+    <img id="game_over" src="images/game_over.png" alt="game-over">
+    <img id="game_winning" src="images/game_winner.png" alt="winner">
 
-    <div class="game_area">
-<!--        <img src="images/m" alt="loser">
-        <img src="images/m" alt="winner">-->
-
-    </div>
+    <div class="game_area_container">
+        <div class="game_area"></div>
 
     <div class="para_container">
         <div class="para_element" id="background1">
@@ -35,6 +34,8 @@
         <div class="para_element" id="ground2">
             <img src="images/ground.png" alt="ground2">
         </div>
+    </div>
+
     </div>
 </body>
 </html>
