updated font in heading

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <title>Guessing Game</title>
 
     <link rel="stylesheet" href="style.css">
+    <link href='https://fonts.googleapis.com/css?family=Indie+Flower' rel='stylesheet' type='text/css'>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script>
     <script src="script.js"></script>
 </head>
@@ -19,23 +20,22 @@
     <div class="game_area_container">
         <div class="game_area"></div>
 
-    <div class="para_container">
-        <div class="para_element" id="background1">
-            <img src="images/background.png" alt="background1">
+        <div class="para_container">
+            <div class="para_element" id="background1">
+                <img src="images/background.png" alt="background1">
+            </div>
+            <div class="para_element" id="background2">
+                <img src="images/background.png" alt="background2">
+            </div>
+            <div class="para_element" id="mario"></div>
+            <div class="para_element bullet" id="bullet"></div>
+            <div class="para_element" id="ground1">
+                <img src="images/ground.png" alt="ground1">
+            </div>
+            <div class="para_element" id="ground2">
+                <img src="images/ground.png" alt="ground2">
+            </div>
         </div>
-        <div class="para_element" id="background2">
-            <img src="images/background.png" alt="background2">
-        </div>
-        <div class="para_element" id="mario"></div>
-        <div class="para_element bullet" id="bullet"></div>
-        <div class="para_element" id="ground1">
-            <img src="images/ground.png" alt="ground1">
-        </div>
-        <div class="para_element" id="ground2">
-            <img src="images/ground.png" alt="ground2">
-        </div>
-    </div>
-
     </div>
 </body>
 </html>
